x-xx-05 - Version 1.0.7

    Bugs fixed or addressed
    -------------------------
    Bug #13658 connection.state does not update on Ping() [ fixed ]
	Bug #13590 ExecuteScalar returns only Int64 regardless of actual SQL type [added test case]
	Bug #13662 Prepare() truncates accented character input [already fixed, added test]
	Bug #11947 MySQLCommandBuilder mishandling CONCAT() aliased column [updated test case]
	Bug #13541 Prepare breaks if a parameter is used more than once [fixed]
	Bug #13632 the MySQLCommandBuilder.deriveparameters has not been updated for MySQL 5
	Bug #13753 Exception calling stored procedure with special characters in parameters
	Bug #11386 Numeric parameters with Precision and Scale not taken into account by Connector [added test case]
	Bug #6902  Errors in parsing stored procedure parameters [fixed before, refixed]
	Bug #13927 Multiple Records to same Table in Transaction Problem [fixed]
	Bug #14631 "#42000Query was empty" [fixed]
	Bug #13806 Does not support Code Page 932	

	Other changes
	-------------------------    
	Failure to provide parameters for out and inout values is now detected
	Changed pooling code to remove issue of skipping Ping() on bogus connnections
    
9-27-05 - Version 1.0.6
 
    Bugs fixed or addressed
    -------------------------
    Bug #13036  Returns error when field names contain any of the following chars %<>()/ etc [fixed]
    Bug #12835	1.0.5 won't install on system with 1.0.4 installed [fixed]
    Bug #12978 	Fatal Error C# Compilation [fixed]
    Bug #13276 	Exception on serialize after inserting null value [fixed]
    Bug #13345 	Connecting from mono 1.1.8 to MySQL 5.0 using MySQL Connector/Net 1.0.5
    
    Other changes
    -------------------------
    Changed SocketStream and StreamCreator to be compatible with Mono
    Added options to not reset and reconfigure connections pulled from the pool
    Connections pulled from the pool that are not reset are also not pinged

8-24-05 - Version 1.0.5
