@@ -504,7 +504,7 @@ namespace MySql.Data.MySqlClient
 				if (pscale != -1)
 					r["NumericScale"] = (short)pscale;
 				r["DataType"] = GetFieldType(i);
-				r["ProviderType"] = (int)f.Type;
+				r["ProviderType"] = (int)f.ProviderType();
 				r["IsLong"] = f.IsBlob && f.ColumnLength > 255;
 				r["AllowDBNull"] = f.AllowsNull;
 				r["IsReadOnly"] = false;
